--- a/project/for_all.css
+++ b/project/for_all.css
@@ -5,6 +5,9 @@ body{
 header{
 	width: 100%;
 	height: 10%;
+	display: flex;
+	flex-direction: column;
+	flex: 1;
 }
 .h_img{
 	width: 100%;
@@ -138,4 +141,13 @@ a:hover{
 	width: 30px;
 	height: 30px;
 	margin: 10px;
+}
+.boody{
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
+footer{
+	display: flex;
+	flex-direction: column;
 }
