--- a/project/main.css
+++ b/project/main.css
@@ -1,7 +1,13 @@
 body{
 	background-color: #EBF1FF;
+
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh; 	
 }
 header{
+	display: flex;
+	flex-direction: column;
 	width: 100%;
 	height: 10%;
 }
@@ -103,4 +109,13 @@ a:hover{
 	width: 30px;
 	height: 30px;
 	margin: 10px;
+}
+.all{
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
+footer{
+	display: flex;
+	flex-direction: column;
 }
