--- a/project/for_all.css
+++ b/project/for_all.css
@@ -1,95 +1,105 @@
-body{
-	background-color: #EBF1FF;
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
 
+* {
+  margin: 0;
+  padding: 0;
 }
-header{
-	width: 100%;
-	height: 10%;
+html,
+body {
+  height: 100%;
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.content {
+  flex: 1 0 auto;
+}
+.footer {
+	flex-direction:column;
 	display: flex;
-	flex-direction: column;
-	flex: 1;
+  justify-content:center;
+  flex: 0 0 auto;
+  
 }
-.h_img{
-	width: 100%;
-	height: 100px;
+.prof{
+	position: absolute;
+	right: 45px;
+	width: 25px;
+	height: 25px;
+	margin: 10px;
 }
-.h_img img{
-	padding-left: 40%;
-	padding-right: 40%;
-	width: 20%;
-	height: 100%;
-	align-items: center;
+.add{
+	position: absolute;
+	right: 0%;
+
+	width: 25px;
+	height: 25px;
+	margin: 10px;
 }
+.logo {
+	width: 25%;
+}
+
+.header {
+	text-align: center;
+}
+
 .menu{
-	width: 100%;
-	height: 20px;
+	margin: 20px 0;
+	background-color: #c9c9c9;
+	font-family: 'Quicksand', sans-serif;
+}
+.menu ul{
 	display: flex;
 	justify-content: space-around;
-	align-items: center;
-	background-color: #6496FF;
+	flex-direction:row;
 }
-.menu a{
-	font-size: 100%;
+.menu ul li{
+	list-style-type: none;
+}
+a{
+	text-align: center;
 	text-decoration: none;
-	color: #fff;
-}
-h2{
-	font-size: 80%;
-	text-align: center;
-}
-h3{
-	text-align: center;
+	color: black;
 }
 p{
 	text-align: center;
 }
-.inf{
-	width: 50%;
-	margin: 20px 25%;
-
+.links{
+	display: flex;
+	justify-content:center;
 }
-.add{
-	position: absolute;
+.links img{
+	width: 30px;
+	height: 30px;
 	margin: 10px;
-	width: 25px;
-	height: 25px;
-	right: 0;
-	top: 0;
-
-	}
-.profile{
-	position: absolute;
-	margin: 10px;
-	width: 25px;
-	height: 25px;
-	right: 45px;
-	top: 0;
 }
+
 hr{
-	width: 70%;
+	width: 80%;
+	margin: 0 auto;
 }
-a{
-	text-decoration: none;
-	color: black;
+
+h2{
 	font-size: 80%;
 	text-align: center;
-	display: block;
-	font-weight: bold;
 }
-a:hover{
-	color: blue;
+h3, p, h1{
+	text-align: center;
 }
-.body{
+.all{
 	display: flex;
-	margin: auto;
 	width: 80%;
+	margin: auto;
 }
 .half{
 	display: flex;
 	width: 50%;
-
 }
 .half_2{
+	line-height: 30px;
 	display: flex;
 	flex-direction: column;
 	width: 50%;
@@ -123,9 +133,8 @@ a:hover{
 	border-radius: 5px;
 	width: 40%;
 	text-align: center;
-	padding-top: 15px;
-	text-decoration: none;
-	font-size: 110%;
+	height: 50px;
+	line-height: 50px;
 }
 .buy:hover{
 	border: 1px solid black;
@@ -133,21 +142,29 @@ a:hover{
 	color: black;
 }
 
-.logos{
-	display: flex;
-	justify-content: center;
-}
-.logos img{
-	width: 30px;
-	height: 30px;
-	margin: 10px;
-}
-.boody{
-	display: flex;
-	flex-direction: column;
-	flex: 1;
-}
-footer{
-	display: flex;
-	flex-direction: column;
+@media screen and (max-width: 820px){
+		.littleimg {
+			display: none;
+		}
+
+		.all {
+			display: block
+		}
+
+		.half {
+			width: 90%;
+			margin: 0 auto;
+			text-align: center;
+		}
+
+		.half img {
+			margin: 0 auto;
+		}
+
+		.half_2 {
+			line-height: 25px;
+			font-size: 15px;
+			width: 90%;
+			margin: 0 auto;
+		}
 }
