--- a/project/main.css
+++ b/project/main.css
@@ -1,121 +1,233 @@
-body{
-	background-color: #EBF1FF;
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
 
+* {
+  margin: 0;
+  padding: 0;
+}
+html,
+body {
+  height: 100%;
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.content {
+  flex: 1 0 auto;
+}
+.footer {
+	flex-direction:column;
 	display: flex;
-	flex-direction: column;
-	min-height: 100vh; 	
+  justify-content:center;
+  flex: 0 0 auto;
+  
 }
-header{
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	height: 10%;
-}
-.h_img{
-	width: 100%;
-	height: 100px;
-}
-.h_img img{
-	padding-left: 40%;
-	padding-right: 40%;
-	width: 20%;
-	height: 100%;
-	align-items: center;
-}
-.menu{
-	width: 100%;
-	height: 20px;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	background-color: #6496FF;
-}
-.menu a{
-	font-size: 100%;
-	text-decoration: none;
-	color: #fff;
-}
-.last, .rings, .earrings, .bracelets, .pendants, .watches{
-	display: flex;
-	justify-content: center;
-	width: 80%;
-	height: 200px;
-	padding: 10px;
-	align-items: center;
-	margin: 30px 10%;
-}
-.card{
-	margin: 1%;
-	border: 1px solid #C0D4FF;
-	border-radius: 5px;
-	background-color: #fff;
-	padding: 20px;
-}
-.card img{
-	display: block;
-	width: 100px;
-	height: 100px;
-	margin: auto;
-}
-h2{
-	font-size: 80%;
-	text-align: center;
-}
-p{
-	font-size: 70%;
-	text-align: center;
-}
-.inf{
-	width: 50%;
-	margin: 20px 25%;
-
+.prof{
+	position: absolute;
+	right: 45px;
+	width: 25px;
+	height: 25px;
+	margin: 10px;
 }
 .add{
 	position: absolute;
-	margin: 10px;
-	width: 25px;
-	height: 25px;
-	right: 0;
-	top: 0;
+	right: 0%;
 
-	}
-.profile{
-	position: absolute;
-	margin: 10px;
 	width: 25px;
 	height: 25px;
-	right: 45px;
-	top: 0;
+	margin: 10px;
 }
-hr{
-	width: 70%;
+.logo {
+	width: 25%;
+}
+
+.header {
+	text-align: center;
+}
+
+.menu{
+	font-family: 'Quicksand', sans-serif;
+	font-weight: bold;
+	margin: 20px 0;
+	background-color: #c9c9c9;
+}
+.menu ul{
+	display: flex;
+	justify-content: space-around;
+	flex-direction:row;
+}
+.menu ul li{
+	list-style-type: none;
 }
 a{
+	text-align: center;
 	text-decoration: none;
 	color: black;
-	font-size: 80%;
+}
+p{
 	text-align: center;
-	display: block;
-	font-weight: bold;
 }
-a:hover{
-	color: blue;
-}
-.logos{
+.links{
 	display: flex;
-	justify-content: center;
+	justify-content:center;
 }
-.logos img{
+.links img{
 	width: 30px;
 	height: 30px;
 	margin: 10px;
 }
-.all{
+.cards{
+	margin: 15px 0;
 	display: flex;
-	flex-direction: column;
-	flex: 1;
+	justify-content:center;
 }
-footer{
-	display: flex;
-	flex-direction: column;
+.card{
+	position: relative;
+	border: 1px solid gray;
+	border-radius: 10px;
+	padding: 5px;
+	margin: 15px;
+	display: inline-block;
+	width: 150px;
+	text-align: center;
+
+}
+.card img:first-child{
+	width: 70%;
+}
+
+.del{
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 30%;
+}
+
+.card p{
+	font-size: 60%;
+	text-align: center;
+}
+.card a{
+	font-size: 80%;
+	text-align: center;
+}
+
+.inf a {
+	display: block;
+	margin: 0 auto;
+	font-family: 'Quicksand', sans-serif;
+	font-weight: bold;
+}
+
+.inf p {
+	margin: 0 auto;
+	display: block;
+	width: 80%;
+}
+.inf{
+	margin: 40px;
+}
+hr{
+	width: 80%;
+	margin: 0 auto;
+}
+@media screen and (max-width: 500px){
+	.card img:first-child{
+		width: 80%;
+	}
+	.cards {
+		display: block;
+		text-align: center;
+	}	
+
+	.card {
+
+		display: block;
+		margin: 5px auto;
+	}
+
+	.card p {
+		font-size: 14px;
+	}
+}
+
+ @media screen and (max-width: 350px) {
+ 	.menu ul {
+		display: flex;
+		flex-direction: column;
+ 	}
+
+ 	.menu ul li {
+ 		display: block;
+ 		width: 100%;
+ 		text-align: center;
+ 		margin: 3px 0;
+ 	}
+
+ 	.logo {
+ 		width: 100%;
+ 	}
+	
+	.prof {
+		width: 13px;
+		height: 13px;
+		top: 0;
+		right: 15px;
+	}
+
+	.add {
+		width: 13px;
+		height: 13px;
+		top: 0;
+		right: 0;
+	}
+
+	.card {
+		width: 60%;	
+	}
+
+	.inf p {
+		display: none;
+	}
+
+ }
+
+ .all {
+ 	display:flex;
+ 	flex-direction: column;
+ }
+ table{
+ 	display: flex;
+ 	justify-content:center;
+ }
+ .button{
+ 	border: 1px solid gray;
+ 	border-radius: 5px;
+ 	margin: auto;
+ 	display: block;
+ 	width: 70%;
+ }
+ .button:hover{
+ 	border: 1px solid black;
+ 	border-radius: 5px;
+	
+ } 
+ tr, th{
+ 	text-align: left;
+ }
+ th{
+	border-collapse: 10px;
+	padding: 5px 0;
+ }
+
+ @media screen and (max-width: 420px) {
+	input[type='text'], textarea {
+		background: yellow;
+		width: 50%;
+	}
+
+	th {
+		font-size: 13px;
+	}
 }
