--- a/project/main.css
+++ b/project/main.css
@@ -24,6 +24,7 @@ body {
   
 }
 .prof{
+	z-index: 1;
 	position: absolute;
 	right: 45px;
 	width: 25px;
@@ -33,7 +34,7 @@ body {
 .add{
 	position: absolute;
 	right: 0%;
-
+	z-index: 1;
 	width: 25px;
 	height: 25px;
 	margin: 10px;
@@ -132,6 +133,78 @@ hr{
 	width: 80%;
 	margin: 0 auto;
 }
+
+.slideshow-container{
+	max-width: 1000px;
+	position: relative;
+	margin: auto;
+}
+.prev, .next{
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	margin-top: -22px;
+	padding: 16px;
+	color: white;
+	font-weight: bold;
+	font-style: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+}
+.next{
+	right: 8px;
+	border-radius: 3px 0 0 3px;
+}
+.prev{
+	left: 8px;
+}
+.prev:hover, .next:hover{
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+.mySlides{
+	text-align: center;
+	max-height: 700px;
+}
+.dots, .dotss, .dotsss{
+	position: absolute;
+	bottom: 10px;
+	cursor: pointer;
+	height: 10px;
+	width: 10px;
+	margin: 0 2px;
+	background-color: #eee;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color:0.6s ease;
+
+}
+.dots{
+	margin-left: -15px;
+}
+.dotsss{
+	margin-left: 20px;
+}
+.active, .dot:hover{
+	background-color: #717171;
+}
+.fade{
+	-webkit-animation-name:fade;
+	-webkit-animation-duration:1.5s;
+	animation-name: fade;
+	animation-duration: 1.5s;
+}
+@-webkit-keyframes fade{
+	from{opacity:.4}
+	to{opacity: 1}
+}
+@keyframes fade{
+	from{opacity: .4;}
+	to{opacity: 1;}
+}
+
+
 @media screen and (max-width: 500px){
 	.card img:first-child{
 		width: 80%;
