--- a/project/all.css
+++ b/project/all.css
@@ -57,6 +57,7 @@ body {
 	flex-direction:row;
 }
 .menu ul li{
+	font-weight: bold;
 	list-style-type: none;
 }
 a{
@@ -90,15 +91,20 @@ h3, p, h1{
 	text-align: center;
 }
 .all{
+
 	display: flex;
-	width: 80%;
-	margin: auto;
+	width: 60%;
+	margin: 30px auto;
+	background-color: #c9c9c9;
+	border-radius: 10px;
 }
 .half{
 	display: flex;
 	width: 50%;
+	justify-content:center;
 }
 .half_2{
+	padding:10px;
 	line-height: 30px;
 	display: flex;
 	flex-direction: column;
@@ -107,19 +113,9 @@ h3, p, h1{
 }
 .bigimg{
 	padding: 20px;
-	width: 75%;
+
+	width: 80%;
 	height: calc(140%/2);
-}
-.littleimg{
-	width: 25%;
-	height: 75%;
-	flex-direction: column;
-	display: flex;
-	align-content: center;
-	justify-content: space-around;
-}
-.littleimg img{
-	width: 90%;
 }
 .take{
 	width: 100%;
@@ -141,6 +137,76 @@ h3, p, h1{
 	border-radius: 5px;
 	color: black;
 }
+.slideshow-container{
+	max-width: 1000px;
+	position: relative;
+	margin: auto;
+}
+.prev, .next{
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	margin-top: -22px;
+	padding: 16px;
+	color: white;
+	font-weight: bold;
+	font-style: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+}
+.next{
+	right: 8px;
+	border-radius: 3px 0 0 3px;
+}
+.prev{
+	left: 8px;
+}
+.prev:hover, .next:hover{
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+.mySlides{
+	text-align: center;
+	max-height: 700px;
+}
+.dots, .dotss, .dotsss{
+	position: absolute;
+	bottom: 10px;
+	cursor: pointer;
+	height: 10px;
+	width: 10px;
+	margin: 0 2px;
+	background-color: #eee;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color:0.6s ease;
+
+}
+.dots{
+	margin-left: -15px;
+}
+.dotsss{
+	margin-left: 20px;
+}
+.active, .dot:hover{
+	background-color: #717171;
+}
+.fade{
+	-webkit-animation-name:fade;
+	-webkit-animation-duration:1.5s;
+	animation-name: fade;
+	animation-duration: 1.5s;
+}
+@-webkit-keyframes fade{
+	from{opacity:.4}
+	to{opacity: 1}
+}
+@keyframes fade{
+	from{opacity: .4;}
+	to{opacity: 1;}
+}
+
 
 @media screen and (max-width: 820px){
 		.littleimg {
