--- a/project/main.css
+++ b/project/main.css
@@ -17,6 +17,7 @@ body {
   flex: 1 0 auto;
 }
 .footer {
+	background-color: rgba(200, 200, 200);
 	flex-direction:column;
 	display: flex;
   justify-content:center;
@@ -52,6 +53,7 @@ body {
 	font-weight: bold;
 	margin: 20px 0;
 	background-color: #c9c9c9;
+	font-size: 18px;
 }
 .menu ul{
 	display: flex;
@@ -60,6 +62,12 @@ body {
 }
 .menu ul li{
 	list-style-type: none;
+}
+.all{
+	background-repeat: no-repeat;
+	background-size:100% 100%;
+	background-color:rgba(100, 100, 100, 0.5);
+	background-image: url("img/bgbg.gif");
 }
 a{
 	text-align: center;
@@ -84,6 +92,7 @@ p{
 	justify-content:center;
 }
 .card{
+	background-color: #fff;
 	position: relative;
 	border: 1px solid gray;
 	border-radius: 10px;
@@ -94,10 +103,32 @@ p{
 	text-align: center;
 
 }
+.card:hover{
+	z-index:20;
+	background-color: #fff;
+	transform: scale(1.5, 1.5);
+	transition-property: background,transform;
+    transition-duration: 0.5s;
+}
 .card img:first-child{
 	width: 70%;
 }
-
+.part{
+	width: 100%;
+	height: 100%;
+	position: relative;
+	padding: 10px;
+}
+.bgimg{
+	margin: auto 0;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	position:absolute;
+	opacity:0.5;
+}
 .del{
 	position: absolute;
 	top: 0;
@@ -106,15 +137,16 @@ p{
 }
 
 .card p{
-	font-size: 60%;
+	font-size: 12px;
 	text-align: center;
 }
 .card a{
-	font-size: 80%;
+	font-size: 16px;
 	text-align: center;
 }
 
 .inf a {
+	font-size: 22px;
 	display: block;
 	margin: 0 auto;
 	font-family: 'Quicksand', sans-serif;
@@ -122,14 +154,18 @@ p{
 }
 
 .inf p {
+	font-size: 20px;
 	margin: 0 auto;
 	display: block;
 	width: 80%;
 }
 .inf{
+	background-color:rgba(250, 250, 250, 0.5);
 	margin: 40px;
 }
 hr{
+	font-weight: bold;
+	color: black;
 	width: 80%;
 	margin: 0 auto;
 }
@@ -137,7 +173,7 @@ hr{
 .slideshow-container{
 	max-width: 1000px;
 	position: relative;
-	margin: auto;
+	margin: 0 auto;
 }
 .prev, .next{
 	cursor: pointer;
